# SearchEngine

./: AVLtree.h  CMakeLists.txt  DocInfo.cpp  DocInfo.h  DocParser.cpp  DocParser.h  Leaf.cpp  Leaf.h  Text.cpp  Text.h  UserInterface.cpp  UserInterface.h  main.cpp  tests.cpp
